[package]
name = "name"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
thiserror = "*"

tracing = "*"
tracing-subscriber = "*"

tokio = { version = "*", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"

# build optimizations

[profile.dev]
codegen-units = 20
opt-level = 1
lto = "off"
incremental = true

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
incremental = true
