[package]
name = "name"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

tracing = "*"
tracing-subscriber = "*"

anyhow = "1"
thiserror = "2"

serde = { version = "1", features = ["derive"] }
toml = "*"
dirs = "5"

# build optimizations

[profile.dev]
codegen-units = 20
opt-level = 1
lto = "off"
incremental = true

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
incremental = true
